--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,31 +20,16 @@
         tools:targetApi="31">
         <activity
             android:name=".FindIdPasswordActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".RegisterActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".LoginActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".edu_space.default_app.todo.DefaultAppBarActivity"
             android:exported="false" />
@@ -70,8 +55,6 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".edu_space.default_app.message.activity.DefaultMessageSelectActivity"
-            android:exported="false" />
             android:name=".edu_space.default_app.message.activity.DefaultMessageFristActivity"
             android:exported="false"/> <!-- 메시지채팅 화면 -->
         <activity
@@ -133,9 +116,7 @@
         <activity
             android:name=".edu_space.default_app.phone.activity.DefaultPhoneAddActivity"
             android:exported="false" /> <!-- 전화 연락처 추가화면 -->
-        <activity
-            android:name=".edu_space.default_app.phone.activity.DefaultPhoneAddActivity"
-            android:exported="false"/> <!-- 전화 연락처 추가화면 -->
+
         <activity
             android:name=".edu_space.default_app.camera.activity.DefaultCameraActivity"
             android:exported="false" /> <!-- 카메라 화면 -->
@@ -196,17 +177,15 @@
             android:exported="false" /> <!-- 앱 설치 메인 화면 -->
         <activity
             android:name=".edu_space.appinstall.AppInstallMainActivity"
-            android:exported="true">
+            android:exported="true"> <!-- 병윤님 앱 설치 메인 화면 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-            android:exported="false" /> <!-- 병윤님 앱 설치 메인 화면 -->
-        <activity
-            android:name=".edu_space.appinstall.AppInstallMainActivity"
-            android:exported="false" />
+            <!-- 병윤님 앱 설치 메인 화면 -->
+
         <activity
             android:name=".edu_space.appinstall.AppInstallSearchActivity"
             android:exported="false" /> <!-- 앱 설치 검색 화면 -->
