--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission
         android:name="android.permission.WRITE_SETTINGS"
         tools:ignore="ProtectedPermissions" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,12 +20,49 @@
         android:theme="@style/Theme.Synergy"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.sungkyul.synergy.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+        <activity android:name=".learning_space.default_app.default_app_bar.DefaultAppBar"
+            android:exported="true">
+             <intent-filter>
+             <action android:name="android.intent.action.MAIN" />
+             <category android:name="android.intent.category.LAUNCHER" />
+             </intent-filter>
+        </activity>
         <activity
-            android:name=".edu_space.default_app.todo.DefaultAppBarActivity"
-            android:exported="false" />
+            android:name=".learning_space.default_app.RealCameraActivity"
+            android:exported="false" >
+        </activity>
         <activity
             android:name=".edu_space.default_app.todo.DefaultMenuActivity"
-            android:exported="false" />
+            android:exported="false">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <activity
+            android:name=".edu_space.default_app.todo.RecentRunsAppActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".edu_space.default_app.todo.DefaultAppAddActivity"
+            android:exported="false" /> <!-- 상단바 -->
+        <!-- android:name=".my_profile.ExamResultActivity" -->
+        <!-- android:exported="false" /> -->
+        <!-- <activity -->
+        <!-- android:name=".edu_space.default_app.todo.DefaultAppBarActivity" -->
+        <!-- android:exported="false" /> -->
+        <activity
+            android:name=".edu_space.default_app.todo.DefaultAppBarActivity"
+            android:exported="false"></activity>
         <activity
             android:name=".edu_space.default_app.todo.DefaultLockedScreenActivity"
             android:exported="false" />
@@ -50,12 +89,14 @@
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity> <!-- 메인화면 -->
         <activity
             android:name=".EduSpaceActivity"
@@ -79,7 +120,7 @@
             android:name=".edu_space.move_edu.activity.MoveDetailActivity"
             android:exported="false" /> <!-- <activity -->
         <!-- android:name=".edu_space.icon_edu.activity.IconEduActivity" -->
-        <!-- android:exported="false"></activity> &lt;!&ndash; 화면구성 &ndash;&gt; -->
+        <!-- android:exported="false" /> -->
         <!-- <activity -->
         <!-- android:name=".edu_space.default_app.activity.MenusActivity" -->
         <!-- android:exported="true"> -->
@@ -88,10 +129,17 @@
         <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
         <!-- </intent-filter> -->
         <!-- </activity> &lt;!&ndash; 아이콘 설명 &ndash;&gt; -->
-        <!-- 화면구성 -->
         <activity
             android:name=".edu_space.screen_layout.ScreenLayoutActivity"
-            android:exported="false" /> <!-- 기본앱 활용 -->
+            android:exported="false">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
         <activity
             android:name=".edu_space.default_app.phone.activity.DefaultPhoneActivity"
             android:exported="false" /> <!-- 전화 화면 -->
@@ -100,12 +148,13 @@
             android:exported="false" /> <!-- 전화 콜 화면 -->
         <activity
             android:name=".edu_space.default_app.phone.activity.DefaultPhoneAddActivity"
-            android:exported="true"> <!-- 전화 연락처 추가화면 -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"> <!-- 전화 연락처 추가화면 -->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".edu_space.default_app.camera.activity.DefaultCameraActivity"
@@ -258,6 +307,10 @@
         <activity
             android:name=".learning_space.intent.LearningIconActivity"
             android:exported="false" />
-    </application>
+        <activity
+            android:name=".learning_space.default_app.camera.CameraTest"
+            android:exported="false">
 
+        </activity>
+    </application>
 </manifest>
