--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,13 +47,7 @@
             android:exported="false" /> <!-- 메시지 화면 -->
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageChattingActivity"
-            android:exported="true"> <!-- 메시지 화면 -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false"/> <!-- 메시지 화면 -->
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageFristActivity"
             android:exported="false"/> <!-- 메시지채팅 화면 -->
@@ -71,39 +65,36 @@
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".MainActivity"
-            android:exported="false" /> <!-- 메인화면 -->
+            android:exported="true"> <!-- 메인화면 -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".EduSpaceActivity"
             android:exported="false" /> <!-- 삭제할 거 -->
         <!-- 아이콘 교육 -->
         <activity
             android:name=".edu_space.icon_edu.activity.IconEduActivity"
-            android:exported="false" /> <!-- 아이콘 첫 화면 -->
-        <!-- 아이콘 첫화면 -->
-        <!-- 화면구성 -->
+            android:exported="true" /> <!-- 2강 사전 설명 -->
+
+
         <activity
             android:name=".edu_space.default_app.todo.MenusActivity"
-            android:exported="false" /> <!-- 아이콘 설명 -->
+            android:exported="false" /> <!-- 2강 사전 설명 -->
         <activity
             android:name=".edu_space.icon_edu.activity.IconDetailActivity"
-            android:exported="false" /> <!-- 아이콘 첫화면 -->
+            android:exported="false" /> <!-- 2강 사전 설명 -->
         <activity
             android:name=".edu_space.move_edu.activity.MoveEduActivity"
-            android:exported="false" />
+            android:exported="false" /><!--1강 기본 동작 설명-->
+
         <activity
             android:name=".edu_space.move_edu.activity.MoveDetailActivity"
-            android:exported="false" /> <!-- <activity -->
-        <!-- android:name=".edu_space.icon_edu.activity.IconEduActivity" -->
-        <!-- android:exported="false"></activity> &lt;!&ndash; 화면구성 &ndash;&gt; -->
-        <!-- <activity -->
-        <!-- android:name=".edu_space.default_app.activity.MenusActivity" -->
-        <!-- android:exported="true"> -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="android.intent.action.MAIN" /> -->
-        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-        <!-- </intent-filter> -->
-        <!-- </activity> &lt;!&ndash; 아이콘 설명 &ndash;&gt; -->
-        <!-- 화면구성 -->
+            android:exported="false" /> <!--1강 기본 동작 설명-->
+
         <activity
             android:name=".edu_space.screen_layout.ScreenLayoutActivity"
             android:exported="false" /> <!-- 기본앱 활용 -->
@@ -159,22 +150,18 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GooglePutCodeActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".edu_space.accountedu.GoogleMailAddActivity"
             android:exported="false" />
         <activity
             android:name=".edu_space.appinstall.installActivity"
-            android:exported="false" /> <!-- 앱 설치 -->
+            android:exported="false"/> > <!-- 앱 설치 -->
+
         <activity
             android:name=".edu_space.appinstall.installMainActivity"
-            android:exported="false" /> <!-- 앱 설치 메인 화면 -->
+            android:exported="false"/> <!-- 앱 설치 메인 화면 -->
         <activity
             android:name=".edu_space.appinstall.AppInstallMainActivity"
             android:exported="true"> <!-- 병윤님 앱 설치 메인 화면 -->
