--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:name="android.permission.WRITE_SETTINGS"
         tools:ignore="ProtectedPermissions" />
 
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -37,32 +38,17 @@
         <!-- 회원가입 화면 -->
         <activity
             android:name=".RegisterActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false"/>
 
         <!-- 로그인 화면 -->
         <activity
             android:name=".LoginActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false"/>
 
         <!-- 화면구성 -->
         <activity
             android:name=".edu_space.screen_layout.ScreenRecentlyActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false"/>
         <activity
             android:name=".edu_space.default_app.todo.DefaultAppBarActivity"
             android:exported="false" />
@@ -83,12 +69,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageChattingActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false"/>
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageSelectActivity"
             android:exported="false" />
@@ -112,22 +93,28 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.icon_edu.activity.BasicEduMainActivity"
-            android:exported="false" />
+            android:exported="false" /> <!--1,2강 선택하는거-->
         <activity
             android:name=".edu_space.icon_edu.activity.IconEduActivity"
-            android:exported="false" />
+            android:exported="true" ><!--1강-->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".edu_space.icon_edu.activity.IconDetailActivity"
+            android:exported="false" /><!--1강-->
+        <activity
+            android:name=".edu_space.move_edu.activity.MoveEduActivity"
+            android:exported="false" /><!--2강-->
+        <activity
+            android:name=".edu_space.move_edu.activity.MoveDetailActivity"
+            android:exported="false" /><!--2강-->
         <activity
             android:name=".edu_space.default_app.todo.MenusActivity"
             android:exported="false" />
-        <activity
-            android:name=".edu_space.icon_edu.activity.IconDetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.move_edu.activity.MoveEduActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.move_edu.activity.MoveDetailActivity"
-            android:exported="false" />
+
         <activity
             android:name=".edu_space.screen_layout.ScreenLayoutActivity"
             android:exported="false" />
@@ -195,12 +182,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.appinstall.AppInstallMainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false"/>
         <activity
             android:name=".edu_space.appinstall.AppInstallSearchActivity"
             android:exported="false" />
