--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
@@ -17,58 +17,67 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Synergy"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".APItestActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <!-- 아이디찾기/비밀번호변경 화면 -->
         <activity
             android:name=".my_profile.CheckMyResultActivity"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".my_profile.MyExamResultActivity"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".learning_space.NewScreenPracticeActivity"
             android:exported="false" />
         <activity
             android:name=".FindIdPasswordActivity"
-            android:exported="false" >
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- 회원가입 화면 -->
+        </activity> <!-- 회원가입 화면 -->
         <activity
             android:name=".RegisterActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- 로그인 화면 -->
+        </activity> <!-- 로그인 화면 -->
         <activity
             android:name=".LoginActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            android:exported="false" />
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
-        <!-- 화면구성-->
+            android:exported="true" /> <!-- 화면구성 -->
         <activity
             android:name=".edu_space.screen_layout.ScreenRecentlyActivity"
-            android:exported="true" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".edu_space.default_app.todo.DefaultAppBarActivity"
@@ -76,7 +85,6 @@
         <activity
             android:name=".edu_space.default_app.todo.DefaultMenuActivity"
             android:exported="false" />
-
         <activity
             android:name=".edu_space.default_app.todo.DefaultLockedScreenActivity"
             android:exported="false" />
@@ -88,7 +96,7 @@
             android:exported="false" /> <!-- 메시지 화면 -->
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageChattingActivity"
-            android:exported="true" > <!-- 메시지 화면 -->
+            android:exported="true"> <!-- 메시지 화면 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -99,13 +107,10 @@
             android:name=".edu_space.default_app.message.activity.DefaultMessageSelectActivity"
             android:exported="false" /> <!-- 메시지채팅 화면 -->
         <!-- 채팅 방법 선택 -->
-            android:exported="false" /> <!-- 메시지 화면 -->
+        <!-- 메시지 화면 -->
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageFristActivity"
             android:exported="false" /> <!-- 메시지채팅 화면 -->
-        <activity
-            android:name=".edu_space.default_app.message.activity.DefaultMessageSelectActivity"
-            android:exported="false" /> <!-- 채팅 방법 선택 -->
         <activity
             android:name=".edu_space.naver.activity.NaverSearchResultActivity"
             android:exported="false" /> <!-- 네이버 검색 결과 화면 -->
@@ -169,20 +174,18 @@
         <activity
             android:name=".edu_space.settingedu2.Setting2MainActivity"
             android:exported="false" /> <!-- <activity -->
-            android:exported="false" />
         <activity
             android:name=".edu_space.settingedu2.Setting2DisplayActivity"
             android:exported="false" />
         <activity
             android:name=".edu_space.settingedu2.Setting2FontActivity"
-            android:exported="true" > <!-- 계정생성 교육 -->
+            android:exported="true"> <!-- 계정생성 교육 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-            android:exported="false" /> <!-- 계정생성 -->
+        </activity> <!-- 계정생성 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
             android:exported="false" />
@@ -218,14 +221,12 @@
             android:exported="false" /> <!-- 앱 설치 메인 화면 -->
         <activity
             android:name=".edu_space.appinstall.AppInstallMainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-            android:exported="false"> <!-- 병윤님 앱 설치 메인 화면 -->
         </activity> <!-- 병윤님 앱 설치 메인 화면 -->
         <activity
             android:name=".edu_space.appinstall.AppInstallSearchActivity"
