--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,7 @@
         tools:targetApi="31">
         <activity
             android:name=".learning_space.screen.PracticeWebViewActivity"
-            android:exported="false">
-            <!--             <intent-filter>-->
-            <!--             <action android:name="android.intent.action.MAIN" />-->
-            <!--             <category android:name="android.intent.category.LAUNCHER" />-->
-            <!--             </intent-filter>-->
-        </activity>
-
+            android:exported="false" />
         <activity
             android:name=".learning_space.screen.PracticeAppMove2Activity"
             android:exported="false" />
@@ -41,16 +35,10 @@
             android:exported="false" />
         <activity
             android:name=".APItestActivity"
-            android:exported="false">
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".learning_space.screen.PracticeScreenLockActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".my_profile.CheckMyResultActivity"
             android:exported="false" />
@@ -59,7 +47,7 @@
             android:exported="false" />
         <activity
             android:name=".learning_space.NewScreenPracticeActivity"
-            android:exported="true"></activity>
+            android:exported="false" />
         <activity
             android:name=".FindIdPasswordActivity"
             android:exported="false" />
@@ -71,10 +59,10 @@
             android:exported="true" />
         <activity
             android:name=".edu_space.screen_layout.ScreenRecentlyActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.screen_layout.ScreenHomeActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.screen_layout.ScreenTopBarActivity"
             android:exported="false" />
@@ -83,7 +71,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.screen_layout.ScreenMenuActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.screen_layout.ScreenMoveHomeActivity"
             android:exported="false" />
@@ -107,7 +95,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageChattingActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageSelectActivity"
             android:exported="false" />
@@ -139,7 +127,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.icon_edu.activity.IconEduActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.default_app.todo.MenusActivity"
             android:exported="false" />
@@ -178,7 +166,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.settingedu2.Setting2FontActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
             android:exported="false" />
