--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,17 +19,23 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
-
+        <!--고정 SplashActivity-->
         <activity android:name=".SplashActivity"
             android:exported="true">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
+
+        <activity
+            android:name=".learning_space.screen.PracticeWebViewActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".learning_space.screen.PracticeWebViewActivity"
-            android:exported="false" />
         <activity
             android:name=".learning_space.screen.PracticeAppMove2Activity"
             android:exported="false" />
