--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,22 +20,18 @@
         tools:targetApi="31">
 
         <!--고정 SplashActivity-->
-        <activity android:name=".SplashActivity"
-            android:exported="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-        </activity>
-
         <activity
-            android:name=".learning_space.screen.PracticeWebViewActivity"
-            android:exported="true" >
+            android:name=".SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".learning_space.screen.PracticeWebViewActivity"
+            android:exported="false" />
         <activity
             android:name=".learning_space.screen.PracticeAppMove2Activity"
             android:exported="false" />
@@ -128,8 +124,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".EduSpaceActivity"
             android:exported="false" />
