문제 풀이 데이터
문제 풀이 데이터

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,13 @@
         </activity>
         <activity
             android:name=".learning_space.NewScreenPracticeActivity"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".FindIdPasswordActivity"
             android:exported="false">
