--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!-- 아이디찾기/비밀번호변경 화면 -->
         <activity
             android:name=".my_profile.CheckMyResultActivity"
             android:exported="true">
@@ -56,33 +55,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- 아이디찾기/비밀번호변경 화면 -->
         <activity
             android:name=".FindIdPasswordActivity"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> <!-- 회원가입 화면 -->
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> <!-- 로그인 화면 -->
-        <activity
-            android:name=".LoginActivity"
-            android:exported="true" /> <!-- 화면구성 -->
-        <activity
-            android:name=".edu_space.screen_layout.ScreenRecentlyActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-        </activity>
+            android:exported="false"/>
 
         <!-- 회원가입 화면 -->
         <activity
@@ -92,7 +68,13 @@
         <!-- 로그인 화면 -->
         <activity
             android:name=".LoginActivity"
-            android:exported="false"/>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <!-- 화면구성 -->
         <activity
@@ -133,8 +115,7 @@
 
         <activity
             android:name=".edu_space.default_app.todo.DefaultMenuActivity"
-            android:exported="false" />
-            android:exported="false" /><!-- 병윤님|화면구성 메뉴화면-->
+            android:exported="false" />><!-- 병윤님|화면구성 메뉴화면-->
 
         <activity
             android:name=".edu_space.default_app.todo.DefaultAppAddActivity"
@@ -167,13 +148,6 @@
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageFristActivity"
             android:exported="false" /> <!-- 메시지채팅 화면 -->
-            android:exported="false"/>
-        <activity
-            android:name=".edu_space.default_app.message.activity.DefaultMessageSelectActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.default_app.message.activity.DefaultMessageFristActivity"
-            android:exported="false" />
         <activity
             android:name=".edu_space.naver.activity.NaverSearchResultActivity"
             android:exported="false" />
@@ -208,10 +182,7 @@
 
         <activity
             android:name=".edu_space.icon_edu.activity.IconDetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.icon_edu.activity.IconDetailActivity"
-            android:exported="false" /><!--1강-->
+            android:exported="false" />><!--1강-->
 
       <activity
             android:name=".edu_space.move_edu.activity.MoveEduActivity"
@@ -249,20 +220,17 @@
         <activity
             android:name=".edu_space.settingedu2.Setting2MainActivity"
             android:exported="false" /> <!-- <activity -->
-            android:exported="false" />
         <activity
             android:name=".edu_space.settingedu2.Setting2DisplayActivity"
             android:exported="false" />
         <activity
             android:name=".edu_space.settingedu2.Setting2FontActivity"
             android:exported="true"> <!-- 계정생성 교육 -->
-            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> <!-- 계정생성 -->
-        </activity>
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
             android:exported="false" />
@@ -305,7 +273,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> <!-- 병윤님 앱 설치 메인 화면 -->
-            android:exported="false"/>
+
         <activity
             android:name=".edu_space.appinstall.AppInstallSearchActivity"
             android:exported="false" />
