[feat] 화면 이동 로직 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,14 @@
             android:name=".my_profile.MyExamResultActivity"
             android:exported="false" />
         <activity
+            android:name=".learning_space.activity.ExamProblemActivity"
+            android:exported="true">
+<!--            <intent-filter>-->
+<!--            <action android:name="android.intent.action.MAIN" />-->
+<!--            <category android:name="android.intent.category.LAUNCHER" />-->
+<!--        </intent-filter>-->
+        </activity>
+        <activity
             android:name=".learning_space.NewScreenPracticeActivity"
             android:exported="false" />
         <activity
